.kubernetes/connect/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: connect
  name: connect
spec:
  replicas: 1
  selector:
    matchLabels:
      app: connect
  template:
    metadata:
      labels:
        app: connect
    spec:
      containers:
        - image: confluentinc/cp-kafka-connect-base:latest
          name: connect
          ports:
            - containerPort: 8083
              name: api
          livenessProbe:
            httpGet:
              port: 8083
              path: /
            initialDelaySeconds: 10
            failureThreshold: 10
            periodSeconds: 10
          volumeMounts:
            - mountPath: '/usr/share/confluent-hub-components'
              name: share

      volumes:
        - name: share
          emptyDir: {}
