.kubernetes/connect/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: connect
  name: connect
spec:
  replicas: 1
  selector:
    matchLabels:
      app: connect
  template:
    metadata:
      labels:
        app: connect
    spec:
      containers:
        - image: confluentinc/cp-kafka-connect-base:latest
          name: connect
          ports:
            - containerPort: 8083
              name: api
            - containerPort: 8080
              name: metrics
          livenessProbe:
            httpGet:
              port: 8083
              path: /
            initialDelaySeconds: 10
            failureThreshold: 10
            periodSeconds: 10
          volumeMounts:
            - mountPath: '/usr/share/confluent-hub-components'
              name: share
            - mountPath: '/kafka/etc'
              name: kafka-etc
            - mountPath: '/kafka/etc/config.yml'
              name: jmx-config
              subPath: config.yml
            - mountPath: '/kafka/etc/config-basic.yml'
              name: jmx-config
              subPath: config-basic.yml

      volumes:
        - name: share
          emptyDir: {}
        - name: kafka-etc
          emptyDir: {}
        - name: jmx-config
          configMap:
            name: connect-jmx-config-cm
            # valid permissions for the jmx configs: -rw-rw-r--
            defaultMode: 0664
            items:
              - key: config.yml
                path: config.yml
              - key: config-basic.yml
                path: config-basic.yml
        - name: helper-scripts
          configMap:
            name: connect-scripts-cm
            defaultMode: 0754
            items:
              - key: 'do-curl.sh'
                path: 'do-curl.sh'
      # Any filesystem mounted to the pod will be owned by this group
      securityContext:
        fsGroup: 1000
