.kubernetes/connect/svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: connect
  name: connect-svc
spec:
  ports:
  - name: api
    port: 8083
    protocol: TCP
    targetPort: api
  selector:
    app: connect
  type: NodePort
