.kubernetes/connect/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: connect-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /connect(/|$)(.*)
            backend:
              service:
                name: connect-svc
                port:
                  name: api
          - pathType: Prefix
            path: /connect-prom(/|$)(.*)
            backend:
              service:
                name: connect-svc
                port:
                  name: metrics
